--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -44,4 +44,21 @@ nav {
   border-radius: 50%;
   width: 35px;
 }
-
+@media (max-width: 900px) {
+  .menu-icon {
+    display: none;
+  }
+  .nav-right img {
+    display: none;
+  }
+  .nav-right .user-icon {
+    display: block;
+    width: 30px;
+  }
+  .logo {
+    width: 90px;
+  }
+  .nav-middle .search-box input {
+    width: 130px;
+  }
+}
