added loader and quality fixes

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,10 @@ img {
   display: flex;
   align-items: center;
 }
+
+.spinnerLoad {
+  min-height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
